
Maintained by hand, so what's "notable" is subjective! Contributors are
encouraged to add entries for their work.

All changes can be found via git - eg, for all changes after a build:
    git log -rb3xx:
or
    https://github.com/mhammond/pywin32/compare/b3xx...main

As of build 305, installation .exe files have been deprecated; see
https://mhammond.github.io/pywin32_installers.html .

Build 309, released 2025/03/09
------------------------------
## pywin32
* Added support for relative path for `pywin32_postinstall`'s `-destination` argument (#2454, @Avasam)
* The postinstall script is now available as a console script. You can invoke it in one of two new methods: (#2408, @Avasam)
  1. `python -m pywin32_postinstall -install` (recommended)
  2. `pywin32_postinstall -install` (shorter but you don't have control over which python environment is used)
* Changed the implementation of 'com_record' to a subclassable Python type (#2437, #2361, @geppi)
* Removed param `hIcon` from `win32comext.shell.ShellExecuteEx`. It was unusable since Windows Vista (#2423, @Avasam)
* Fixed `nbios.NCBStruct` packing (#2406, @Avasam)
* Restored axdebug builds on Python 3.10 (#2416, @Avasam)
* Fix for Python 3.12 interpreter crashes when accessing a COM Record field (#2415, @geppi)
* Pythonwin: Bumped Scintilla from 1.77 to 4.4.6. The full changelog can be found here: https://www.scintilla.org/ScintillaHistory.html
* Fixed Pythonwin's editor failing due to invalid regex import (#2419, @Avasam)
* Last error wrongly set by some modules (#2302, @CristiFati)
* Dropped support for Python 3.7 (#2207, @Avasam)
* Implement the creation of SAFEARRAY(VT_RECORD) from a sequence of COM Records (#2317, @geppi)
* Implement record pointers as [in, out] method parameters of a Dispatch Interface (#2304, #2310, @geppi)
* Fix memory leak converting to PyObject from some SAFEARRAY elements (#2316)
* Fix bug where makepy support was unnecessarily generated (#2354, #2353, @geppi)