@@ -1,6 +1,3 @@
-// Requires Windows 7 SDK to build
-#if WINVER >= 0x0601
-
 // This file declares the IApplicationDocumentLists Interface for Python.
 // Generated by makegw.py
 // ---------------------------------------------------
@@ -21,5 +18,3 @@ class PyIApplicationDocumentLists : public PyIUnknown {
     PyIApplicationDocumentLists(IUnknown *pdisp);
     ~PyIApplicationDocumentLists();
 };
-
-#endif  // WINVER
