@@ -82,7 +82,6 @@ generates Windows .hlp files.
 #include "PyITransferMediumItem.h"
 #include "PyIIdentityName.h"
 
-// These Require Windows 7 SDK to build
 #include "PyIEnumObjects.h"
 #include "PyIApplicationDocumentLists.h"
 #include "PyIApplicationDestinations.h"
@@ -1492,7 +1491,7 @@ static PyObject *PySHGetFolderLocation(PyObject *self, PyObject *args)
 
 // @pymethod |shell|SHAddToRecentDocs|Adds a document to the shell's list of recently used documents or clears all
 // documents from the list. The user gains access to the list through the Start menu of the Windows taskbar.
-// @comm On Windows 7, the entry is also added to the application's jump list.
+// @comm The entry is also added to the application's jump list.
 // @pyseeapi SHAddToRecentDocs
 // @comm The underlying API function has no return value, and therefore no way to indicate failure.
 static PyObject *PySHAddToRecentDocs(PyObject *self, PyObject *args)
@@ -1557,8 +1556,6 @@ static PyObject *PySHAddToRecentDocs(PyObject *self, PyObject *args)
                 PyObject_FreePIDL(buf);
             break;
         }
-#if WINVER >= 0x0601
-        // Introduced in Windows 7
         case SHARD_APPIDINFO: {
             // @flag SHARD_APPIDINFO|Tuple of (<o PyIShellItem>, str), where str is an AppID
             SHARDAPPIDINFO buf;
@@ -1639,7 +1636,6 @@ static PyObject *PySHAddToRecentDocs(PyObject *self, PyObject *args)
             PY_INTERFACE_POSTCALL;
             break;
         }
-#endif  // WINVER
         default:
             PyErr_SetString(PyExc_NotImplementedError, "SHARD value not supported");
             return NULL;
@@ -3520,7 +3516,6 @@ static PyObject *PySHCreateStreamOnFileEx(PyObject *self, PyObject *args, PyObje
 static PyObject *PySetCurrentProcessExplicitAppUserModelID(PyObject *self, PyObject *args)
 {
     // @comm Should be used early in process startup before creating any windows
-    // @comm Requires Windows 7 or later
     // @pyparm str|AppID||The Application User Model ID used to group taskbar buttons
     if (pfnSetCurrentProcessExplicitAppUserModelID == NULL)
         return PyCom_BuildPyException(E_NOTIMPL);
@@ -3543,7 +3538,6 @@ static PyObject *PySetCurrentProcessExplicitAppUserModelID(PyObject *self, PyObj
 
 // @pymethod str|shell|GetCurrentProcessExplicitAppUserModelID|Retrieves the current taskbar identifier
 // @comm Will only retrieve an identifier if set by the application, not a system-assigned default.
-// @comm Requires Windows 7 or later
 static PyObject *PyGetCurrentProcessExplicitAppUserModelID(PyObject *self, PyObject *args)
 {
     if (pfnGetCurrentProcessExplicitAppUserModelID == NULL)
@@ -3805,8 +3799,6 @@ static const PyCom_InterfaceSupportInfo g_interfaceSupportData[] = {
     PYCOM_INTERFACE_FULL(CurrentItem),         // based on IRelatedItem with no extra methods
     PYCOM_INTERFACE_FULL(DisplayItem),         // based on IRelatedItem with no extra methods
     PYCOM_INTERFACE_FULL(IdentityName),        // based on IRelatedItem with no extra methods
-                                               // These require Windows 7 SDK to build
-#if WINVER >= 0x0601
     PYCOM_INTERFACE_CLIENT_ONLY(EnumObjects),
     PYCOM_INTERFACE_CLIENT_ONLY(ApplicationDocumentLists),
     PYCOM_INTERFACE_CLSID_ONLY(ApplicationDocumentLists),
@@ -3821,7 +3813,6 @@ static const PyCom_InterfaceSupportInfo g_interfaceSupportData[] = {
     PYCOM_INTERFACE_CLIENT_ONLY(CustomDestinationList),
     PYCOM_INTERFACE_CLSID_ONLY(ShellLibrary),
     PYCOM_INTERFACE_CLIENT_ONLY(ShellLibrary),
-#endif
 };
 
 static int AddConstant(PyObject *dict, const char *key, long value)
@@ -4115,8 +4106,6 @@ PYWIN_MODULE_INIT_FUNC(shell)
     ADD_IID(FOLDERID_Contacts);
     ADD_IID(FOLDERID_SidebarParts);
     ADD_IID(FOLDERID_SidebarDefaultParts);
-    // Removed in Windows 7 SDK
-    // ADD_IID(FOLDERID_TreeProperties);
     ADD_IID(FOLDERID_PublicGameTasks);
     ADD_IID(FOLDERID_GameTasks);
     ADD_IID(FOLDERID_SavedGames);
@@ -4127,8 +4116,6 @@ PYWIN_MODULE_INIT_FUNC(shell)
     ADD_IID(FOLDERID_UsersFiles);
     ADD_IID(FOLDERID_SearchHome);
     ADD_IID(FOLDERID_OriginalImages);
-#if WINVER >= 0x0601
-    // Added in Windows 7 SDK
     ADD_IID(FOLDERID_DeviceMetadataStore);
     ADD_IID(FOLDERID_DocumentsLibrary);
     ADD_IID(FOLDERID_HomeGroup);
@@ -4145,7 +4132,6 @@ PYWIN_MODULE_INIT_FUNC(shell)
     ADD_IID(FOLDERID_UserProgramFilesCommon);
     ADD_IID(FOLDERID_UsersLibraries);
     ADD_IID(FOLDERID_VideosLibrary);
-#endif  // WINVER
 
     // Known folder types
     ADD_IID(FOLDERTYPEID_Invalid);
@@ -4161,13 +4147,6 @@ PYWIN_MODULE_INIT_FUNC(shell)
     ADD_IID(FOLDERTYPEID_Contacts);
     ADD_IID(FOLDERTYPEID_NetworkExplorer);
     ADD_IID(FOLDERTYPEID_UserFiles);
-    // Removed in Windows 7 SDK
-    // ADD_IID(FOLDERTYPEID_Library);
-    // ADD_IID(FOLDERTYPEID_MusicDetails);
-    // ADD_IID(FOLDERTYPEID_MusicIcons);
-    // ADD_IID(FOLDERTYPEID_NotSpecified);
-#if WINVER >= 0x0601
-    // Added in Windows 7 SDK
     ADD_IID(FOLDERTYPEID_Communications);
     ADD_IID(FOLDERTYPEID_Generic);
     ADD_IID(FOLDERTYPEID_GenericLibrary);
@@ -4184,7 +4163,6 @@ PYWIN_MODULE_INIT_FUNC(shell)
     ADD_IID(FOLDERTYPEID_StartMenu);
     ADD_IID(FOLDERTYPEID_UsersLibraries);
     ADD_IID(FOLDERTYPEID_Videos);
-#endif  // WINVER
 
     // ??? The shell passes this resource type to IShellResources.OpenResource,
     // but it doesn't seem to be defined anywhere ???
